# embedded-sw-timer

./: .bashrc  CMakeLists.txt  Dockerfile  LICENSE  README.md
scripts/: build.sh
src/: CMakeLists.txt  sw_timer.c  sw_timer.h
tests/: CMakeLists.txt  hwtimer_mock.c  hwtimer_mock.h  sw_timer_test.c
